# digital_signature_hashing

./: CMakeLists.txt  README.md
appendix/: БФИ2202_ОИБ_Лаб№4_Вар№1.docx
hashing_techniques/: hashing.cpp  hashing.hpp  main.cpp
hashing_techniques/forms/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
